--- a/ContosoUniversity/Pages/Index.cshtml
+++ b/ContosoUniversity/Pages/Index.cshtml
@@ -1,48 +1,40 @@
 ﻿@page
-@model ContosoUniversity.Pages.IndexModel
-
+@model IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Home page";
 }
 
-<h2>Index</h2>
-
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Student[0].LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Student[0].FirstMidName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Student[0].EnrollmentDate)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Student) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstMidName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EnrollmentDate)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="jumbotron">
+    <h1>Contoso University</h1>
+    <h2>Hayden Fowler</h2>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <h2>Welcome to Contoso University</h2>
+        <p>
+            Contoso University is a sample application that
+            demonstrates how to use Entity Framework Core in an
+            ASP.NET Core Razor Pages web app.
+        </p>
+    </div>
+    <div class="col-md-4">
+        <h2>Build it from scratch</h2>
+        <p>You can build the application by following the steps in a series of tutorials.</p>
+        <p>
+            <a class="btn btn-default"
+               href="https://docs.microsoft.com/aspnet/core/data/ef-rp/intro">
+                See the tutorial &raquo;
+            </a>
+        </p>
+    </div>
+    <div class="col-md-4">
+        <h2>Download it</h2>
+        <p>You can download the completed project from GitHub.</p>
+        <p>
+            <a class="btn btn-default"
+               href="https://github.com/aspnet/AspNetCore.Docs/tree/master/aspnetcore/data/ef-rp/intro/samples/">
+                See project source code &raquo;
+            </a>
+        </p>
+    </div>
+</div>
