--- a/ContosoUniversity/Pages/Students/Delete.cshtml
+++ b/ContosoUniversity/Pages/Students/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ContosoUniversity.Pages.DeleteModel
+@model ContosoUniversity.Pages.Students.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
