Hello and Converter

--- a/ContosoUniversity/Pages/Shared/_Layout.cshtml
+++ b/ContosoUniversity/Pages/Shared/_Layout.cshtml
@@ -31,11 +31,13 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="Students/Index">Students</a></li>
+                    <li><a asp-page="/Students/Index">Students</a></li>
                     <li><a asp-page="/About">About</a></li>
                     <li><a asp-page="/Courses/Index">Courses</a></li>
                     <li><a asp-page="/Instructors/Index">Instructors</a></li>
                     <li><a asp-page="/Departments/Index">Departments</a></li>
+                    <li><a asp-page="/HelloWorld">Hello</a></li>
+                    <li><a asp-page="/Converter">Currency Converter</a></li>
                 </ul>
             </div>
         </div>
